--- a/package.json
+++ b/package.json
@@ -12,14 +12,13 @@
   "dependencies": {
     "@sentry/browser": "^9.32.0",
     "@sentry/react": "^9.32.0",
-    "@sentry/replay": "^7.116.0",
-    "@sentry/tracing": "^7.120.3",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@sentry/types": "^9.32.0",
     "@sentry/vite-plugin": "^3.5.0",
     "@types/node": "^24.0.4",
     "@types/react": "^18.3.5",
