Add Codecov Test Analytics and bundle analysis

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -10,16 +10,26 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '18.19.0'
           
       - name: Install dependencies
         run: npm install
         
       - name: Run tests with coverage
         run: npm run test:coverage
+        if: always()
         
       - name: Upload coverage to Codecov
-        run: |
-          curl -Os https://cli.codecov.io/latest/linux/codecov
-          chmod +x codecov
-          ./codecov -t ${{ secrets.CODECOV_TOKEN }} -v 
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: false
+          
+      - name: Upload test results to Codecov
+        if: always()
+        uses: codecov/test-results-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./test-results.xml
+          flags: unit-tests
+          name: Unit Tests 
