--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@codecov/vite-plugin": "^1.9.1",
     "@eslint/js": "^9.9.1",
     "@sentry/types": "^9.32.0",
     "@sentry/vite-plugin": "^3.5.0",
