--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@sentry/react": "^9.32.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
     "@codecov/vite-plugin": "^1.9.1",
